# mget

./: .gitignore  .travis.yml  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  config.status  configure  configure.ac  genmanpages  multiget.err
.github/: dependabot.yml
.github/workflows/: build-test.yml
autom4te.cache/: output.0  output.1  traces.0  traces.1
manpages/: Makefile  Makefile.am  Makefile.in  multiget.1  multiget.sh.1
manpages/manpagessrc/: multiget.1.txt  multiget.sh.1.txt
scripts/: Makefile  Makefile.am  Makefile.in  multiget  multiget.sh
scripts/scriptssrc/: multiget.in  multiget.sh.in
source/man/man1/: Makefile.am  mget.1.man.in
source/man/man5/: Makefile.am  mget.5.man.in
source/progs/bash/: Makefile.am  mget.in  mget.sh.in
src/bash-comp/: Makemodule.am  mget.sh.in
src/man/1/: Makefile.am  mget.1.man.in
src/man/5/: Makefile.am  mget.5.man.in
src/manpages/: Makefile.am  multiget.1.txt
src/manpages/man1/: Makefile.am  mget.1.txt  multiget.1.txt
src/manpages/man5/: Makefile.am  multiget.5.txt
src/prg/bash/: Makefile.am  mget.sh.in
src/scripts/: Makefile.am  mget.in
