#! /usr/bin/env bash
#########################################################################
#									#
# Script ID: ./Makefile.am						#
# Author: Copyright (C) 2013-2017  Mark Grant				#
#									#
# Released under the GPLv3 only.					#
# SPDX-License-Identifier: GPL-3.0					#
#									#
# Purpose:								#
# AutoMake script file to generate mget project from source.		#
#									#
#########################################################################

#########################################################################
#									#
# Changelog								#
#									#
# Date		Author	Version	Description				#
#									#
# 16/06/2014	MG	1.0.1	Started versioning of this script.	#
# 19/06/2014	MG	1.0.2	Introduce man1 and man5 sub-directories	#
#				of src/manpages				#
# 27/08/2014	MG	1.0.3	Change name to mget to avoid package	#
#				name duplication in Ubuntu.		#
# 20/10/2015	MG	1.0.4	Restructure to conform to AutoTools	#
#				General Template v1.0.5.		#
# 03/12/2017	MG	1.0.5	Add SPDX license tags to source files.	#
#									#
#########################################################################


SUBDIRS = source/progs/bash source/man/man1 source/man/man5
